# holographix

./: .gitignore  CNAME  LICENSE  README.md  docker-compose.yml  holo-browser_0.1.2_amd64.deb  pyproject.toml
src/: Dockerfile.holo  pyproject.toml
src/codec_simulation/: README.md  index.html  package.json  types.ts  vite.config.ts
src/docs/: README.md
src/examples/: baseline_udp_receiver.py  baseline_udp_sender.py  field_tools.py  heal_fixed_point.py  holo_mesh_node.py  holo_mesh_receiver.py  holo_mesh_sender.py  pack_and_extract.py  psnr_benchmark.py
src/flower.jpg.holo/: chunk_0000.holo  chunk_0001.holo  chunk_0002.holo  chunk_0003.holo  chunk_0004.holo  chunk_0005.holo  chunk_0006.holo  chunk_0007.holo  chunk_0008.holo  chunk_0009.holo  chunk_0010.holo  chunk_0011.holo  chunk_0012.holo  chunk_0013.holo  chunk_0014.holo  chunk_0015.holo  chunk_0016.holo  chunk_0017.holo  chunk_0018.holo  chunk_0019.holo  chunk_0020.holo  chunk_0021.holo  chunk_0022.holo  chunk_0023.holo  chunk_0024.holo  chunk_0025.holo  chunk_0026.holo  chunk_0027.holo  chunk_0028.holo  chunk_0029.holo  chunk_0030.holo  chunk_0031.holo  manifest.json
src/holo/: __init__.py  __main__.py  codec.py  container.py  field.py  recovery.py
src/holo/net/: arch.py  (+2 more)
src/holographix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/systemd/: holo_mesh_node.env  holo_mesh_node.service  holo_mesh_receiver.env  holo_mesh_receiver.service  holo_mesh_sender.env  holo_mesh_sender.service
src/tests/: test_codec.py  test_mesh.py  test_tnc.py  test_tv.py
src/tools/: train_ae_latent.py
(+66 files in other folders)
